# pyBusPirateLite

./: LICENSE  README.md  readthedocs.yml  setup.cfg  setup.py  spi_example.py
docs/: Makefile  conf.py  demo.rst  index.rst  make.bat  make.cmd  requirements.txt
docs/source/: conf.py  i2c_examples.rst  index.rst  modules.rst  pyBusPirateLite.rst
examples/: spi_example.py
pyBusPirateLite/: BBIO_base.py  BitBang.py  I2C.py  I2Chigh.py  SPI.py  UART.py  UC.py  __init__.py  base.py  common_functions.py  i2c_example.py  onewire.py  rawwire.py
tests/: bbio_test.py  test_bbio_base.py  test_bitbang.py  test_common_functions.py  test_i2c.py  test_spi.py  test_uart.py  testmode.py  testspi.py
