[metadata]
name = pyBusPirateLite
version = attr: src.VERSION
description = Python library for BusPirate
long_description = file: README.md
keywords = BusPirate
license = BSD 3-Clause License
classifiers =
    Development Status :: 4 - Beta
    Topic :: Utilities
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
[options]
zip_safe = False
include_package_data = True
packages = find:

[options.extras_require]
pdf = ReportLab>=1.2; RXP
rest = docutils>=0.3; pack ==1.1, ==1.3


setup(
    name=pyBusPirateLite
    version="0.1",
    author="Juergen Hasch",
    author_email="juergen.hasch@elbonia.de",
    description="Python library for BusPirate",
    license="BSD",
    keywords="BusPirate",
    url="http://dangerousprototypes.com/docs/Bus_Pirate_Scripting_in_Python",
    packages=['pyBusPirateLite'],
    long_description=read('README.md'),
    classifiers=[
        "Development Status :: 4 - Beta",
        "Topic :: Utilities",
        "License :: OSI Approved :: BSD License",
    ],